--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ What is TSA beginning
                             <h3 class="section-heading mb-4">
                                 What is TSA
                             </h3>
-                            <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, the members are able to represent their school and community when competing. </p>
-                            <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
+                            <p>TSA (Technology Student Association) is a national organization dedicated to creating future leaders in the science, technology, mathematics, and engineering fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, members are able to represent their school and community when competing. </p>
+                            <p>The TSA motto “learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on creating solutions for pressing issues in the world.</p>
 
                             <h4 class="section-heading mb-4">
                                 TSA Events
@@ -271,7 +271,7 @@ Who We Are beginning
                         </h3>
                         <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
-                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited <b>66</b> loyal members were recruited. The chapter is collectively participating in <b>19</b> competitive events for the first time at the NJ state conference this spring. </p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where <b>63</b> loyal members were recruited. The chapter collectively particpated in <b>17</b> competitive events for the first time at the NJ state conference this spring. The team is competing in 6 events at the TSA National Conference from June 22nd to June 26th at Atlanta, Georgia.  </p>
                         <h3 class = "text-white">Creed</h3>
                         <p class = "text-white">I believe in using technology to <b>make the world a better place.</b> I believe in <b>collaborating with others</b> to create beneficial solutions for the future. I believe that I should be dedicated to creating new technologies and <b>educating others about technology.</b> I will strive to better the world around us and to <b>spread the influence of technology.</b></p>
                     </div>
@@ -309,11 +309,11 @@ Who We Are beginning
 
                             <h2> Meetings</h2>
                             <h4>Attendance & Checkpoints</h4>
-                            <p>Before the start of every club meeting, each student must sign in to attendance via Google Form. Once a month, the officers send a checkpoint form through email to check up on the progress of each group. The weekly after school meeting following this checkpoint, the officers meet with each group in person to check in on their progress, answer questions, and help them plan for the next week. The officers will advise each group as they move closer to the competition dates.
+                            <p>Before the start of every club meeting, each student must sign in to attendance via Google Form. Once a month, the officers send a checkpoint form through email to check up on the progress of each group. During the weekly team meeting following this checkpoint, the officers meet with each group to check in on their progress, answer questions, and help them plan for the next week. The officers will advise each group as they move closer to the competition dates.
                             </p>
                             <h4>Weekly After School Meetings</h4>
                             <p> 
-                                To keep all students intact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
+                                To keep all students intact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project and to collaborate on plans for the upcoming competitions.
                             </p>
                             <div>
                                 <img style="width:auto; height:350px"src="img/weeklymeetings1.JPG"/>
@@ -329,10 +329,10 @@ Who We Are beginning
                         <div>
                             <h2>Recruitment</h2>
                             <h4>Club Fair</h4>
-                            <p>Club fair is a school program in which each club has a chance to showcase the main message of the club, and can directly recruit members by recording their names and contact information. The TSA club of High School North was able to gain 66 loyal members through that short fair and hopefully, will be able to expand on that number by next year’s fair.
+                            <p>Club Fair is a school program where every club in the school has a chance to directly recruit new members by recording their contact information. The TSA club of High School North was able to gain 63 loyal members through that short fair, we hope to expand on that number by next year’s fair.
                             </p>
                             <h4>Lab Safety Training</h4>
-                            <p> The lab safety training is a TSA school club program that teaches each student the different technology available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room has enough experience and knowledge to ensure their own safety and the safety of those around them. If the student passes the quiz, they will have access to all the lab’s machinary.
+                            <p> The lab safety training is a TSA school club program that trains students how to use the different engineering equipment available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room has enough experience and knowledge to ensure their own safety and the safety of those around them. If the student passes the quiz, they will have access to all the lab’s machinary.
                             </p>
                             <div>
                                 <img style="width:auto; height:250px"src="img/lab1.png"/>
@@ -364,7 +364,7 @@ Who We Are beginning
                         <div>
                             <h2>Community</h2>
                             <h4>Project Code</h4>
-                            <p>Project Code is a community program founded by 3 members of our TSA chapter to provide elementary school kids access to free programming classes. Members of our TSA chapter created a 3 month long Scratch programming curriculum, contacted libraries, and promoted the classes to the community. So far, the team has taught 60 students in 2 local libraries - Hamilton and Monroe.
+                            <p>Project Code is a community program founded by 3 members of our TSA chapter to provide elementary school kids access to free programming classes. Members of our TSA chapter created a 3 month long Scratch programming curriculum, contacted libraries, and promoted the classes to the community. So far, the team has taught 90 students in 2 local libraries - Hamilton and Monroe.
                             </p>
                             <div>
                                 <img style="width:auto; height:350px"src="img/projectcode1.jpg"/>
@@ -374,7 +374,7 @@ Who We Are beginning
                             <br>
                             <h4>Innovation Fair</h4>
                             <p> 
-                                Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to showcase their TSA projects in the community. The Innovation Fair in West Windsor-Plainsboro is a public community fair where students from different schools come to display their innovative projects. Members of our TSA chapter have been accepted to showcase their projects at this fair this spring.
+                                Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to showcase their TSA projects in the community. The Innovation Fair in West Windsor-Plainsboro is a public community fair held in May where students from different schools come to display their innovative projects. Members of our TSA chapter have been accepted to showcase their projects at this fair this spring.
                             </p>
 
                         </div>
@@ -456,33 +456,33 @@ Who We Are beginning
                     <div class="thumbnail"><img src="officers/sahit.png"/></div>
                     <h3>Sahit Penmatcha</h3>
                     <h4>President</h4>
-                    <p class="description">Sahit is a founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, informs the committee about what should be done, and sets up meetings with various sources.</p>
+                    <p class="description">Sahit is a founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meetings, informs the committee about what should be done, and sets up meetings with various sources.</p>
                 </div>
                 <div class="product" product-id="2">
                     <div class="thumbnail"><img src="officers/neil.png"/></div>
                     <h3>Neil Patel</h3>
                     <h4>Vice President</h4>
-                    <p class="description">Neil is a founder and Vice President of TSA. He is interested in video production and photography. The Vice President assists officers in accomplishing tasks assigned by President, and takes control of club if President is not present.
+                    <p class="description">Neil is a founder and Vice President of TSA. He is interested in video production and photography. The Vice President assists officers in accomplishing tasks assigned by President and takes control of club if the President is not present.
                     </p>
                 </div>
                 <div class="product" product-id="3">
                     <div class="thumbnail"><img src="officers/george.png"/></div>
                     <h3>George Zhou</h3>
                     <h4>Secretary</h4>
-                    <p class="description">George holds the secretary position. He has a passion for STEM and is particularly interested in software development. The secretary records the participation of the club members and conferences with the students about event progress.
+                    <p class="description">George holds the secretary position. He has a passion for STEM and is particularly interested in software development. George records the participation of the club members and conferences with the students about event progress.
                     </p>
                 </div>
                 <div class="product" product-id="4">
                     <div class="thumbnail"><img src="officers/skandan.png"/></div>
                     <h3>Skandan Venkatraman</h3>
                     <h4>Treasurer</h4>
-                    <p class="description">Skandan is the club treasurer. He is interested in biology and the medical sciences. The treasurer controls the financial portions of the club, maintains the club’s bank account and updates other officers on account information.</p>
+                    <p class="description">Skandan is the club treasurer. He is interested in biology and the medical sciences. The treasurer controls the financial portions of the club, maintains the club’s bank account, and updates other officers on account information.</p>
                 </div>
                 <div class="product" product-id="5">
                     <div class="thumbnail"><img src="officers/aparna.png"/></div>
                     <h3>Aparna Rajesh</h3>
                     <h4>Reporter</h4>
-                    <p class="description">Aparna holds the reporter position. She is interested in educating younger children about STEM and spreading STEM in the community. The reporter reports the club’s progress or any news to the public, contributes to the TSA web page and contacts the club president if any urgent news regarding the club is released.
+                    <p class="description">Aparna holds the reporter position. She is interested in educating younger children about STEM and spreading STEM in the community. The reporter reports the club’s progress or any news to the public, contributes to the TSA web page, and contacts the club president if any urgent news regarding the club is released.
                     </p>
                 </div>
                 <div class="product" product-id="6">
@@ -605,7 +605,7 @@ Who We Are beginning
                         </div>
                     </div>
                     <div class="container .nobg">
-                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference was held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey competed in over 30 different events and the winners are proceeding to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we collectively participated in 17 events with a majority of members doing multiple events.
+                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference was held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey competed in over 30 different events and some are proceeding to the National TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we collectively participated in 17 events with a majority of members doing multiple events.
                             <br>   
                             <img width="auto" height="auto" src="img/stateconf.jpg_large"/>
 
@@ -623,7 +623,7 @@ Who We Are beginning
                         </div>
                     </div>
                     <div class="container">
-                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The national TSA conference is from June 22nd to June 26th. This year, it is being held in Atlanta, Georgia. Students from all over the country who have won at their state competitions will be competing in this 4 day long conference, participiating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
+                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The National TSA conference is from June 22nd to June 26th. This year, it is being held in Atlanta, Georgia. Students from all over the country will be competing in this 5 day long conference, participating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
                     </div>
                 </section>
                 <section class="accordions__accordion">
@@ -653,7 +653,7 @@ Who We Are beginning
         <div class="section-title" id = "awards">
             <h3>OUR AWARDS</h3>
             <p class = "text-center col-lg-6 col-centered">
-                In our first year as a club, our 66 students placed in 9 total events at the state conference! The winning teams are now heading to the national competition. 
+                In our first year as a club, our 66 students placed in 9 total events at the state conference! Some of the winning teams are now heading to the national competition. 
             </p>
             <table class = "col-lg-6 col-centered">
                 <thead>
