--- a/design-brief.html
+++ b/design-brief.html
@@ -305,7 +305,7 @@
                                 <div class="circle-icon mr-4">2</div>
                                 <div class="media-body">
                                     <h5>Generate Practice Exercises & Quizzes.</h5>
-                                    <p>A.I.D.A will analyze the content of the given documents and will multiple choice, fill in the blank, and matching questions in the form of practice problems or complete practice tests.</p>
+                                    <p>A.I.D.A will analyze the content of the given documents and will create multiple choice, fill in the blank, and matching questions in the form of practice problems or complete practice tests.</p>
                                 </div>
                             </li>
                             <li class="media">
@@ -376,7 +376,7 @@
                             </div>
                         </div>
                         <div class="container .nobg">
-                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text" >AI can be used to make YOUR life easier, like in Smart Home systems and personal assistants. <b>But AI’s personal uses go beyond the scope of convenience. </b>AI can be used for personalized learning : it can learn from your mistakes and craft a curriculum based on your learning style. It can be used for personal finance : for example, an app called Digit analyzes user habits to optimize spending and saving. AI can also be used to manage your portfolio—providing financial advice with minimal human intervention. Another up and coming use of AI is in self driving cars. These cars not only save time but also significantly reduce the chances of accidents. Self driving cars have an accident rate lower than the national average by 25%, and tend to have less severe accidents in general. They also follow the best driving practices that the average human driver does not and communicate with other cars to craft the most efficient routes to your destination.
+                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text" >AI can be used to make your life easier. Every day technologies like smart home systems and personal assistants are examples of artificial intelligence. <b>However,  AI’s personal uses go beyond the scope of convenience. </b>AI can be used for personalized learning; it can learn from your mistakes and craft a curriculum based on your learning style. It can be used for personal finance; for example, an app called Digit analyzes user habits to optimize spending and saving. AI can also be used to manage your portfolio, providing financial advice with minimal human intervention. Another up and coming use of AI is in self driving cars. These cars not only save time but also significantly reduce the chances of accidents. Self driving cars have an accident rate lower than the national average by 25% and tend to have less severe accidents in general. They also follow the best driving practices that the average human driver does not and communicate with other cars to craft the most efficient routes to your destination.
 </p></div>
                         </div>
                     </section>
@@ -390,7 +390,7 @@
                             </div>
                         </div>
                         <div class="container">
-                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text" >AI can be used by businesses to analyze their sales and predict which items will sell best. Nowadays, most tech companies thrive not because of the massive amounts of data they collect but because of how they analyze it. Companies such as Google use this data to suggest the best advertisements to their customers : they drive their profits and customers are shown the product that most suits them. One example of this is with Youtube. Google’s recommendation algorithm for Youtube videos analyzes the videos that people watch and uses this data to improve its own suggestions on which videos the user would be most likely to click on. In turn, Youtube increases the time a user spends on the site, the number of advertisements they click on and their profits.
+                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text" >AI can be used by businesses to analyze their sales and predict which items will sell best. Nowadays, most tech companies thrive not because of the massive amounts of data they collect but because of how they analyze it. Companies such as Google use this data to suggest the best advertisements to their customers; they drive their profits, and customers are shown the product that most suits them. One example of this is with YouTube. Google’s recommendation algorithm for YouTube videos analyzes the videos that people watch and uses this data to improve its own suggestions on which videos the user would be most likely to click on. In turn, YouTube increases the time a user spends on the site, the number of advertisements they click on, and consequently their profits.
                                 </p></div>
 
                         </div>
@@ -421,7 +421,7 @@
                                 </div>
                             </div>
                             <div class="container">
-                                <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Recreational') }"><p class = "text" >AI has applications that can save lives, increase business revenue and completely transform our education system. But it also has many uses that make life more enjoyable and convenient. One AI service created by Salesforce summarizes long articles for people to read. People no longer need to sift through large amounts of information to learn the part that they need. This service brings information to people who don’t necessarily have the time to go through lengthy articles. AI can also be used in games. 18 years ago, IBM’s Deep Blue beat world champion Garry Kasparov at chess. Now, AI technologies such as Google’s AlphaZero can master any games that humans would take months to excel at in just a few hours. The applications of learning these games include providing challenging opponents to human players and to provide tips to humans on their gameplay. Even chess grandmasters such as Magnus Carlsen can improve their gameplay through AI.
+                                <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Recreational') }"><p class = "text" >AI has applications that can save lives, increase business revenue, and completely transform our education system. However, it also has many uses that make life more enjoyable and convenient. One AI service created by Salesforce summarizes long articles for people to read. People no longer need to sift through large amounts of information to learn the part that they need. This service brings information to people who don’t necessarily have the time to go through lengthy articles. AI can also be used in games. 18 years ago, IBM’s Deep Blue beat world champion Garry Kasparov at chess. Now, AI technologies such as Google’s AlphaZero can master any games that humans would take months to excel at in just a few hours. The applications of learning these games include providing challenging opponents to human players and to provide tips to humans on their gameplay. Even chess grandmasters such as Magnus Carlsen can improve their gameplay through AI.
                                     </p></div>
                             </div>
                         </section>
@@ -682,7 +682,7 @@
                     <h3>Safety & Liabilities</h3>
                 </div>
                 <p class = "text-center text-white">
-                A science fiction writer, Isaac Asimov, created three laws of robotics that must be followed to create harmless AI technologies. A.I.D.A was carefully designed to follow all three of these laws because here at A.I.D.A. technologies, safety is our utmost priority.
+                A science fiction writer, Isaac Asimov, created three laws of robotics that must be followed to create harmless AI technologies. A.I.D.A was carefully designed to follow all three of these laws because here at A.I.D.A. Technologies, safety is our utmost priority.
                 </p>
                 <br>
                 <p class = "text-white" style = "text-align : justify;">✔ A robot may not injure a human being or, through inaction, allow a human being to come to harm.</p>
@@ -693,7 +693,7 @@
                         <div class="section4-title" >
                             <h4 class="mb-3">First Law</h4>
 
-                            <p class="light-font mb-5">A.I.D.A. was not designed with an intention to harm, and our self-learning algorithms strictly pertain to educating students (creating test questions, evaluating learning styles).
+                            <p class="light-font mb-5">A.I.D.A. was not designed with an intention to harm, and our self-learning algorithms strictly pertain to educating students (creating test questions, evaluating learning styles, etc.).
 
 </p>
                             <h4 class="mb-3">Second Law</h4>
@@ -707,7 +707,7 @@
                             <p class="light-font mb-5">A.I.D.A. does not have any self-destructive capabilities and simply serves as an interactive learning module.
 </p>
                             <h4 class="mb-3">Potential Liabilities</h4>
-                            <p class="light-font mb-5">A.I.D.A. collects large amounts of data from the documents that users scan and how they react to certain learning methods. This may raise privacy concerns and so, the data collected by A.I.D.A is tracked anonymously i.e. without a name associated with it.</p>
+                            <p class="light-font mb-5">A.I.D.A. collects large amounts of data from the documents that users scan and how they react to certain learning methods. This may raise privacy concerns, so the data collected by A.I.D.A is tracked anonymously i.e. without a name associated with it.</p>
                         </div>
                     </div>
                 </div>
